Adjust package.json

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "homebridge-broadlink-rm-pro",
-  "displayName": "Homebridge Broadlink RM Pro",
-  "version": "4.4.15",
-  "description": "Broadlink RM plugin (including the mini and pro) for homebridge with AC Pro and TV features",
+  "name": "homebridge-broadlink-rm-pro-http",
+  "displayName": "Homebridge Broadlink RM Pro HTTP",
+  "version": "4.4.3",
+  "description": "Broadlink RM plugin (including the mini and pro) for homebridge with AC Pro and TV features, adding HTTP endpoints for execution",
   "license": "ISC",
   "scripts": {
     "release": "release-it",
@@ -21,12 +21,11 @@
     "homebridge": ">=1.4.1"
   },
   "author": {
-    "name": "kiwi-cam"
+    "name": "rocket-monkey"
   },
-  "funding": "https://paypal.me/kiwicamRM",
   "repository": {
     "type": "git",
-    "url": "git@github.com:kiwi-cam/homebridge-broadlink-rm.git"
+    "url": "https://github.com/rocket-monkey/homebridge-broadlink-rm.git"
   },
   "dependencies": {
     "await-semaphore": "^0.1.3",
